Prepare for bootstrap layout

--- a/packages/dx-react-demos/src/index.css
+++ b/packages/dx-react-demos/src/index.css
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    margin: 20px;
+}
+
 .virtual-table {
     border-top: 1px solid gray;
     border-left: 1px solid gray;
